[package]
name = "keyplace"
version = "0.1.1"
authors = ["Mindbeam Research Inc"]
edition = "2018"
readme = "README.md"

categories = ["cryptography","web"]
description = "Keyplace - server assisted key derivation for humans"
exclude = [".github", "rustfmt.toml"]
keywords = ["keybase", "key", "derivation"]
license = "MIT/Apache-2.0"
repository = "https://github.com/mindbeam/keyplace"

[dependencies]c
ed25519-dalek= { version="1.0", features=["serde"] }
scrypt = "0.4.1"
toboggan-kv = { version = "0.1.2" }
rand = { version = "0.7" }
sha2="0.9"
hmac="0.9"
crypto-mac="0.9"
constant_time_eq = "0.1.5"
base64 = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
zeroize={ version = "1.1", features=["zeroize_derive"] }
bincode = "1.3"

[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-console-logger = "^0.1.1"
wasm-bindgen-futures = "0.4.5"
wasm-bindgen-test = "0.3"

[profile.dev.package.scrypt]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.test.package.scrypt]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16